--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body,
   height: 100vh;
   overflow: hidden;
   font-size: 16px;
-  background: url(https://www.toptal.com/designers/subtlepatterns/patterns/lightpaperfibers.png);
+  background: url(https://www.toptal.com/designers/subtlepatterns/uploads/stucco.pngg);
 }
 
 button {
@@ -113,7 +113,7 @@ button1:hover {
 }
 .app-sidebar-note.active,
 .app-sidebar-note.active small {
-  background: #08c;
+  background: rgb(53, 203, 214);
   color: white;
 }
 
